--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/plugin-proposal-function-bind": "^7.2.0",
     "@tulipjs/eslint-config": "^1.1.1",
     "babel-loader": "^8.0.2",
     "css-loader": "^2.1.1",
@@ -30,6 +33,16 @@
     "url-loader": "^1.1.1",
     "webpack": "^4.28.1",
     "webpack-cli": "^3.1.0"
+  },
+  "dependencies": {
+    "react": "^16.8.5",
+    "prop-types": "^15.7.2",
+    "react-datepicker": "^2.8.0",
+    "@material-ui/core": "^4.2.0",
+    "@material-ui/icons": "^3.0.1",
+    "@material-ui/styles": "^4.1.0",
+    "class-autobind": "^0.1.4",
+    "clsx": "^1.0.4"
   },
   "bugs": {
     "url": "https://github.com/laurentiu1981/material-ui-form-helpers/issues"
