--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Render helpers for material ui inputs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack  --mode=production",
+    "storybook": "start-storybook -p 9001"
   },
   "repository": {
     "type": "git",
@@ -32,10 +34,13 @@
     "style-loader": "^0.23.0",
     "url-loader": "^1.1.1",
     "webpack": "^4.28.1",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.0",
+    "@storybook/addon-actions": "^4.0.0-alpha.20",
+    "@storybook/react": "^4.0.0-alpha.20"
   },
   "dependencies": {
     "react": "^16.8.5",
+    "react-dom": "^16.8.5",
     "prop-types": "^15.7.2",
     "react-datepicker": "^2.8.0",
     "@material-ui/core": "^4.2.0",
