--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "material-ui-form-helpers",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Render helpers for material ui inputs",
   "main": "index.js",
   "scripts": {
@@ -39,15 +39,22 @@
     "@storybook/react": "^4.0.0-alpha.20"
   },
   "dependencies": {
-    "react": "^16.8.5",
-    "react-dom": "^16.8.5",
-    "prop-types": "^15.7.2",
-    "react-datepicker": "^2.8.0",
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^3.0.1",
     "@material-ui/styles": "^4.1.0",
     "class-autobind": "^0.1.4",
-    "clsx": "^1.0.4"
+    "clsx": "^1.0.4",
+    "lodash": "^4.17.11",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.5",
+    "react-datepicker": "^2.8.0",
+    "react-dom": "^16.8.5",
+    "react-redux": "^5.1.1",
+    "react-router": "^5.0.0",
+    "react-select": "^2.4.4",
+    "redux": "^3.7.2",
+    "redux-form": "^7.2.0",
+    "redux-form-storybook": "^1.0.2"
   },
   "bugs": {
     "url": "https://github.com/laurentiu1981/material-ui-form-helpers/issues"
