--- a/package.json
+++ b/package.json
@@ -4,10 +4,23 @@
   "description": "Render helpers for material ui inputs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "webpack  --mode=production",
     "build:dev": "webpack --mode=development",
     "storybook": "start-storybook -p 9001"
+  },
+  "jest": {
+    "setupFiles": [
+      "<rootDir>/.jest/registerContext.js"
+    ],
+    "transformIgnorePatterns": [
+      "/node_modules/(?!react-datepicker).+\\.js$",
+      "/node_modules/(?!reac-datepicker).+\\.css$"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+    }
   },
   "repository": {
     "type": "git",
@@ -23,21 +36,26 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.2.3",
-    "@babel/preset-react": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.2.3",
     "@babel/plugin-proposal-function-bind": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "@storybook/addon-actions": "^4.0.0-alpha.20",
+    "@storybook/addon-storyshots": "^5.1.11",
+    "@storybook/react": "^4.0.0-alpha.20",
     "@tulipjs/eslint-config": "^1.1.1",
     "babel-loader": "^8.0.2",
+    "babel-plugin-require-context-hook": "^1.0.0",
     "css-loader": "^2.1.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^24.9.0",
     "node-sass": "^4.11.0",
+    "react-test-renderer": "^16.9.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
     "url-loader": "^1.1.1",
     "webpack": "^4.28.1",
-    "webpack-cli": "^3.1.0",
-    "@storybook/addon-actions": "^4.0.0-alpha.20",
-    "@storybook/react": "^4.0.0-alpha.20"
+    "webpack-cli": "^3.1.0"
   },
   "dependencies": {
     "@material-ui/core": "^4.2.0",
