--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     "@babel/plugin-proposal-function-bind": "^7.2.0",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
-    "@storybook/addon-actions": "^4.0.0-alpha.20",
+    "@storybook/addon-actions": "^5.1.11",
     "@storybook/addon-storyshots": "^5.1.11",
-    "@storybook/react": "^4.0.0-alpha.20",
+    "@storybook/react": "^5.1.11",
     "@tulipjs/eslint-config": "^1.1.1",
     "babel-loader": "^8.0.2",
     "babel-plugin-require-context-hook": "^1.0.0",
