--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "material-ui-form-helpers",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Render helpers for material ui inputs",
   "main": "index.js",
   "scripts": {
@@ -66,6 +66,7 @@
     "lodash": "^4.17.11",
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
+    "react-color": "^2.17.3",
     "react-datepicker": "^2.8.0",
     "react-dom": "^16.8.5",
     "react-redux": "^5.1.1",
