--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "material-ui-form-helpers",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "Render helpers for material ui inputs",
   "main": "index.js",
   "scripts": {
@@ -43,6 +43,7 @@
     "@storybook/addon-actions": "^5.1.11",
     "@storybook/addon-storyshots": "^5.1.11",
     "@storybook/react": "^5.1.11",
+    "@testing-library/react": "^9.1.4",
     "@tulipjs/eslint-config": "^1.1.1",
     "babel-loader": "^8.0.2",
     "babel-plugin-require-context-hook": "^1.0.0",
