--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "jest": "^24.9.0",
     "node-sass": "^4.11.0",
     "react-test-renderer": "^16.9.0",
+    "redux-devtools-extension": "^2.13.8",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
     "url-loader": "^1.1.1",
