--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "material-ui-form-helpers",
-  "version": "0.1.16",
+  "version": "0.1.17",
   "description": "Render helpers for material ui inputs",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.es.js",
   "scripts": {
     "test": "jest",
-    "build": "webpack  --mode=production",
-    "build:dev": "webpack --mode=development",
+    "build": "webpack --progress --profile --colors --config=webpack.dev.config.js",
+    "rollup": "rollup -c",
     "storybook": "start-storybook -p 9001"
   },
   "jest": {
@@ -35,29 +36,45 @@
   "author": "Laurentiu Lese",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.7.7",
     "@babel/core": "^7.2.2",
+    "@babel/plugin-external-helpers": "^7.7.4",
     "@babel/plugin-proposal-class-properties": "^7.2.3",
     "@babel/plugin-proposal-function-bind": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.7.6",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
+    "@rollup/plugin-commonjs": "^11.0.1",
     "@storybook/addon-actions": "^5.1.11",
     "@storybook/addon-storyshots": "^5.1.11",
     "@storybook/react": "^5.1.11",
+    "@svgr/rollup": "^5.0.1",
     "@testing-library/react": "^9.1.4",
     "@tulipjs/eslint-config": "^1.1.1",
     "babel-loader": "^8.0.2",
     "babel-plugin-require-context-hook": "^1.0.0",
+    "compression-webpack-plugin": "^3.0.1",
     "css-loader": "^2.1.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
     "node-sass": "^4.11.0",
     "react-test-renderer": "^16.9.0",
     "redux-devtools-extension": "^2.13.8",
+    "rollup": "^1.29.0",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-peer-deps-external": "^2.2.0",
+    "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-url": "^3.0.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^1.1.1",
     "webpack": "^4.28.1",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.0",
+    "webpack-merge": "^4.2.2",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "@material-ui/core": "^4.4.1",
