--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "build": "webpack  --mode=production",
+    "build": "webpack --env=prod --mode=production --progress --profile --colors --config=webpack.prod.config.js",
     "build:dev": "webpack --mode=development",
     "storybook": "start-storybook -p 9001"
   },
