--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "material-ui-form-helpers",
-  "version": "0.1.19",
+  "version": "0.1.20",
   "description": "Render helpers for material ui inputs",
   "main": "lib/index.js",
+  "browser": "lib/index.umd.js",
   "module": "lib/index.esm.js",
   "scripts": {
     "test": "jest",
     "build": "webpack --env=prod --mode=production --progress --profile --colors --config=webpack.prod.config.js",
     "build:dev": "webpack --mode=development",
     "rollup": "rollup -c",
+    "prepublishOnly": "rm -rf lib && npm run rollup",
     "storybook": "start-storybook -p 9001"
   },
   "jest": {
@@ -61,6 +63,7 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-terser": "^5.1.3",
     "rollup-plugin-uglify": "^6.0.4",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
