--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "material-ui-form-helpers",
-  "version": "0.1.21",
+  "version": "0.1.22",
   "description": "Render helpers for material ui inputs",
   "main": "lib/index.js",
   "browser": "lib/index.umd.js",
@@ -71,7 +71,12 @@
     "webpack": "^4.28.1",
     "webpack-cli": "^3.1.0"
   },
-  "dependencies": {
+  "peerDependencies": {
+    "react": "^16.8.5",
+    "react-dom": "^16.8.5",
+    "@material-ui/core": "^4.4.1",
+    "@material-ui/icons": "^4.4.1",
+    "@material-ui/styles": "^4.4.1",
     "class-autobind": "^0.1.4",
     "clsx": "^1.0.4",
     "lodash": "^4.17.11",
@@ -84,13 +89,6 @@
     "redux": "^3.7.2",
     "redux-form": "^7.2.0",
     "redux-form-storybook": "^1.0.2"
-  },
-  "peerDependencies": {
-    "react": "^16.8.5",
-    "react-dom": "^16.8.5",
-    "@material-ui/core": "^4.4.1",
-    "@material-ui/icons": "^4.4.1",
-    "@material-ui/styles": "^4.4.1"
   },
   "bugs": {
     "url": "https://github.com/laurentiu1981/material-ui-form-helpers/issues"
