--- a/package.json
+++ b/package.json
@@ -90,6 +90,9 @@
     "redux-form": "^7.2.0",
     "redux-form-storybook": "^1.0.2"
   },
+  "dependencies": {
+    "react-select": "^2.4.4"
+  },
   "bugs": {
     "url": "https://github.com/laurentiu1981/material-ui-form-helpers/issues"
   },
