--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "material-ui-form-helpers",
-  "version": "0.1.23",
+  "version": "0.1.24",
   "description": "Render helpers for material ui inputs",
   "main": "lib/index.js",
   "browser": "lib/index.umd.js",
@@ -91,7 +91,23 @@
     "redux-form-storybook": "^1.0.2"
   },
   "dependencies": {
-    "react-select": "^2.4.4"
+    "react": "^16.8.5",
+    "react-dom": "^16.8.5",
+    "@material-ui/core": "^4.4.1",
+    "@material-ui/icons": "^4.4.1",
+    "@material-ui/styles": "^4.4.1",
+    "class-autobind": "^0.1.4",
+    "clsx": "^1.0.4",
+    "lodash": "^4.17.11",
+    "prop-types": "^15.7.2",
+    "react-color": "^2.17.3",
+    "react-datepicker": "^2.8.0",
+    "react-redux": "^5.1.1",
+    "react-router": "^5.0.0",
+    "react-select": "^2.4.4",
+    "redux": "^3.7.2",
+    "redux-form": "^7.2.0",
+    "redux-form-storybook": "^1.0.2"
   },
   "bugs": {
     "url": "https://github.com/laurentiu1981/material-ui-form-helpers/issues"
