--- a/package.json
+++ b/package.json
@@ -42,12 +42,14 @@
     "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.2.3",
     "@babel/plugin-proposal-function-bind": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.9.6",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "@rollup/plugin-commonjs": "^11.0.1",
     "@storybook/addon-actions": "^5.1.11",
     "@storybook/addon-storyshots": "^5.1.11",
     "@storybook/react": "^5.1.11",
+    "@testing-library/jest-dom": "^5.8.0",
     "@testing-library/react": "^9.1.4",
     "@tulipjs/eslint-config": "^1.1.1",
     "babel-loader": "^8.0.2",
